--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">Poke Dex</string>
+    <string name="app_name">Pocket PokeDex</string>
     <string name="action_settings">Settings</string>
     <string name="search_text">Search</string>
     <string name="search_hint">E.g: Ditto</string>
     <string name="submit_text">Submit</string>
+    <string name="search">Search</string>
 </resources>
