--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search_hint">E.g: Ditto</string>
     <string name="submit_text">Submit</string>
     <string name="search">Search</string>
+    <string name="title_activity_search_result">SearchResultActivity</string>
 </resources>
