--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Pocket PokeDex</string>
+    <string name="app_name">PokeDex</string>
     <string name="action_settings">Settings</string>
     <string name="search_text">Search</string>
-    <string name="search_hint">E.g: Ditto</string>
+    <string name="search_hint">E.G: DITTO</string>
     <string name="submit_text">Submit</string>
     <string name="search">Search</string>
     <string name="title_activity_search_result">SearchResultActivity</string>
